--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>CURIOSIDADES DE TECNOLOGIA</h1>
-        <p>Tudo aquilo que você sempre quis saber sobre o mundo<br>tech, em um só lugar</p>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo<br>tech em um só lugar</p>
     </header>
     <nav>
         <a class="menu" href="">Home</a>
